<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>com.celeral</groupId>
    <artifactId>netconf</artifactId>
    <version>${revision}</version>
    <relativePath>../..</relativePath>
  </parent>

  <groupId>com.celeral</groupId>
  <artifactId>jnc</artifactId>
  <packaging>jar</packaging>

  <name>JNC</name>
  <description>JNC (Java NETCONF Client) is the name of a Java library for communicating with NETCONF agents.</description>
  <url>https://github.com/tail-f-systems/JNC</url>

  <properties>
    <japicmp.skip>true</japicmp.skip>
    <skipNexusStagingDeployMojo>false</skipNexusStagingDeployMojo>
  </properties>

  <licenses>
    <license>
      <name>Apache License, Version 2.0</name>
      <url>http://apache.org/licenses/LICENSE-2.0</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <developers>
    <developer>
      <organization>Tail-f Systems</organization>
      <organizationUrl>http://www.tail-f.com/</organizationUrl>
    </developer>
    <developer>
      <organization>Celeral</organization>
      <organizationUrl>https://github.com/Celeral</organizationUrl>
    </developer>
  </developers>

  <scm>
    <connection>scm:git:git@github.com:tail-f-systems/JNC.git</connection>
    <developerConnection>scm:git:git@github.com:tail-f-systems/JNC.git</developerConnection>
    <url>git@github.com:tail-f-systems/JNC.git</url>
  </scm>


<!--  <profiles>
    <profile>
      <id>release</id>
      <build>
        <plugins>
          <plugin>
            <groupId>com.github.siom79.japicmp</groupId>
            <artifactId>japicmp-maven-plugin</artifactId>
            <version>0.14.3</version>
            <configuration>
              <oldVersion>
                <dependency>
                  <groupId>com.tailf</groupId>
                  <artifactId>jnc</artifactId>
                  <version>1.0</version>
                </dependency>
              </oldVersion>
              <newVersion>
                <file>
                  <path>${project.build.directory}/${project.artifactId}-${project.version}.jar</path>
                </file>
              </newVersion>
              <parameter>
                <onlyModified>true</onlyModified>
                <accessModifier>protected</accessModifier>
                <breakBuildBasedOnSemanticVersioning>true</breakBuildBasedOnSemanticVersioning>
                <onlyBinaryIncompatible>false</onlyBinaryIncompatible>
                <includeSynthetic>false</includeSynthetic>
                <ignoreMissingClasses>false</ignoreMissingClasses>
              </parameter>
            </configuration>
            <executions>
              <execution>
                <phase>verify</phase>
                <goals>
                  <goal>cmp</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
        </plugins>

      </build>
    </profile>
  </profiles>-->

  <build>
    <!-- Specify maven non-standard source folder -->
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
    </plugins>
  </build>
  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <scope>test</scope>
      <type>jar</type>
    </dependency>
    <dependency>
      <groupId>ch.ethz.ganymed</groupId>
      <artifactId>ganymed-ssh2</artifactId>
      <version>262</version>
    </dependency>
  </dependencies>
</project>
